# Bayesian-On-line-Learning-of-the-Hazard-Rate

./: README.md  constant_hazard_rate.py  em.py  first.py  hierarchical_changepoint.py  pyproject.toml  second.py
.github/workflows/: pytest.yml
tests/: test_constant_hazard_rate.py  test_em.py  test_hierarchical_changepoint.py
